Fixed issue with ipad landscape spacing

--- a/_sass/_content.scss
+++ b/_sass/_content.scss
@@ -72,10 +72,10 @@ header {
     padding: $spacing--m $spacing--xl;
   }
 
-  .hero{
-    padding-bottom: 5%;
-    padding-top: 5%;
-  }
+  // .hero{
+  //   padding-bottom: 5%;
+  //   padding-top: 5%;
+  // }
 
   .main-wrapper {
     padding: 0 $spacing--xl;
