--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -30,10 +30,6 @@ body {
 
   .projects {
     max-width: 100%;
-
-    .project {
-      margin-bottom: 0;
-    }
   }
 }
 
